adding color array

--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -1,8 +1,8 @@
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 network={
-	ssid="xxxx"
-	psk="xxxx"
+	ssid="totonet"
+	psk="phacktory"
 	proto=RSN
 	key_mgmt=WPA-PSK
 	pairwise=CCMP
@@ -10,8 +10,8 @@ network={
 }
 
 network={
-	ssid="xxxx"
-	psk="xxxx"
+	ssid="ADRIEN"
+	psk="PSSWD"
 	proto=RSN
 	key_mgmt=WPA-PSK
 	pairwise=CCMP
