--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -1,8 +1,10 @@
+
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+
 network={
-	ssid="totonet"
-	psk="phacktory"
+	ssid="xxx"
+	psk="xxx"
 	proto=RSN
 	key_mgmt=WPA-PSK
 	pairwise=CCMP
@@ -10,11 +12,10 @@ network={
 }
 
 network={
-	ssid="ADRIEN"
-	psk="PSSWD"
+	ssid="xxx"
+	psk="xxx"
 	proto=RSN
 	key_mgmt=WPA-PSK
 	pairwise=CCMP
 	auth_alg=OPEN
 }
-
